# LimaKiloBot

./: .env.example  .gitignore  LICENSE  README.md  available_aircraft.json  bot.py  config.py  information copy.json  information.json  lsogrades.json  pyproject.toml  server_status.json  test.py
cogs/: flight.py  gci.py  information.py  server.py
