[tool.poetry]
name = "limakilobot"
version = "0.1.0"
description = "A POC for LK"
authors = ["Grimnir09"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"
nextcord = "^2.0.0-alpha.4"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
